<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical"
    android:layout_width="fill_parent" android:layout_height="fill_parent">


    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content"
        android:layout_weight="6">

        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/optimistic"
            android:gravity="center" android:layout_weight="1" android:textColor="#00FF00" android:padding="5px"/>
        <EditText android:id="@+id/optimistic" android:layout_width="fill_parent" android:layout_height="wrap_content"
            android:gravity="center" android:layout_weight="1" android:inputType="number"/>
            
        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/nominal"
            android:gravity="center" android:layout_weight="1" android:textColor="#00FFFF" android:padding="5px"/>
        <EditText android:id="@+id/nominal" android:layout_width="fill_parent" android:layout_height="wrap_content"
            android:gravity="center" android:layout_weight="1" android:inputType="number"/>

        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/pessimistic"
            android:gravity="center" android:layout_weight="1" android:textColor="#FFFF00" android:padding="5px"/>
        <EditText android:id="@+id/pessimistic" android:layout_width="fill_parent" android:layout_height="wrap_content"
            android:gravity="center" android:layout_weight="1" android:inputType="number" />

    </LinearLayout>

    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
        android:layout_weight="8">
        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/result"
            android:gravity="center" android:layout_weight="1" android:textStyle="bold" android:padding="2px"/>
        <TextView android:id="@+id/result" android:layout_width="fill_parent" android:layout_height="wrap_content"
            android:padding="10px" android:paddingTop="0px"  android:textSize="256px" android:gravity="center" android:layout_weight="7"
            android:text="0" />

    </LinearLayout>

    <LinearLayout android:orientation="horizontal" android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button android:id="@+id/reset" android:text="@string/reset" android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_weight="1" />
        <Button android:id="@+id/calculate" android:text="@string/calculate" android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_weight="3" android:textStyle="bold"/>
    </LinearLayout>


</LinearLayout>
